src/Schedule.g4
grammar Schedule;
schedule:jadwal+;
jadwal: hari jam'->'ruangan'('konfigurasi')' matkul'('konfigurasi')'preforw;
hari: HARI;
jam: JAM;
ruangan: ALPHANUM;
konfigurasi: kapasitas fasilitas;
matkul: ALPHANUM;
preforw: PREFORW;
kapasitas: ALPHANUM;
fasilitas: ALPHA(COMMA ALPHA)+;

SCHEDULE: 'Schedule {';
HARI: ('Senin'|'Selasa'|'Rabu'|'Kamis'|'Jumat'|'Sabtu'|'Minggu');
JAM: ('01'|'02'|'03'|'04'|'05'|'06'|'07'|'08'|'09'|'10'|'11');
PREFORW: ('P'|'W');
ALPHA: [a-zA-Z]+;
ALPHANUM: [a-zA-Z0-9]+;
NUM: [0-9]+;
COMMA: ',';
ENTER: [\n];
TAB: [\t];
WS: [ \t\r\n]+ -> skip;
